# status-react

./: .env  .env.jenkins  .env.nightly  .env.nightly.staging.fleet  .env.prod  .gitignore  CHANGELOG.md  Jenkinsfile.release  Jenkinsfile.upload_release  Makefile  STATUS_GO_VERSION  clj-rn.conf.edn  project.clj
android/: gradle.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
ci/: Jenkinsfile  Jenkinsfile.android  Jenkinsfile.combined  Jenkinsfile.release  Jenkinsfile.upload_release_android  android.groovy  common.groovy  desktop.groovy  ios.groovy  mobile.groovy
ci/desktop/: Jenkinsfile  lib.groovy
deployment/macos/: Info.plist
desktop/: CMakeLists.txt  main.cpp
desktop/reportApp/: CMakeLists.txt
desktop_files/: .re-natal  package.json  package.json.orig
fastlane/: Fastfile
ios/StatusIm/: Info.plist
mobile_files/: package-lock.json  package.json  package.json.orig
modules/react-native-desktop-notification/desktop/: CMakeLists.txt  desktopnotification.cpp  desktopnotification.h
modules/react-native-desktop-shortcuts/desktop/: desktopshortcuts.cpp
modules/react-native-status/android/: build.gradle
modules/react-native-status/desktop/: rctstatus.cpp
modules/react-native-status/ios/RCTStatus/: RCTStatus.h  RCTStatus.m  pom.xml
resources/config/: fleets.json
scripts/: build-desktop.sh  sign-macos-pkg.sh
src/status_im/: constants.cljs  events.cljs
src/status_im/accounts/: core.cljs
src/status_im/accounts/create/: core.cljs
src/status_im/browser/: core.cljs  db.cljs  permissions.cljs
src/status_im/chat/: models.cljs  specs.cljs  subs.cljs
src/status_im/contact/: core.cljs  db.cljs  subs.cljs
src/status_im/contact_code/: core.cljs  subs.cljs
src/status_im/data_store/: chats.cljs  contacts.cljs  messages.cljs
src/status_im/extensions/: core.cljs  ethereum.cljs
src/status_im/hardwallet/: card.cljs  core.cljs  fx.cljs
src/status_im/init/: core.cljs
src/status_im/messages/: core.cljs  subs.cljs
src/status_im/models/: transactions.cljs  wallet.cljs
src/status_im/native_module/: core.cljs
src/status_im/node/: core.cljs
src/status_im/pairing/: core.cljs
src/status_im/react_native/: resources.cljs
src/status_im/signals/: core.cljs
src/status_im/transport/: core.cljs  db.cljs  filters.cljs  shh.cljs
src/status_im/utils/: async.cljs  config.cljs  db.clj  notifications.cljs
test/appium/tests/: conftest.py  test_chatbot.py  test_transaction.py
test/appium/views/: chat_view.py  profile_view.py  sign_in_view.py  wallet_view.py
test/desktop_sikuli/tests/: test_create_account.py  test_profile.py  test_recover_access.py
test/desktop_sikuli/views/: base_element.py  base_view.py  profile_view.py  sign_in_view.py
translations/: en.json
(+127 files in other folders)
